[#59677630] fixed 'too much recursion' issue when opening the modal window

--- a/app/assets/stylesheets/trade/shipments.scss
+++ b/app/assets/stylesheets/trade/shipments.scss
@@ -252,7 +252,7 @@ div.popup-holder01 {
   line-height: 60px;
 }
 
-#shipment_form_modal {
+.shipment-form-modal {
   form {
     margin-bottom: 0;
   }
